--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "http": "^0.0.1-security",
     "mongodb": "^3.2.2",
     "mongodb-core": "3.2.2",
     "nodemon": "^2.0.20",
