i hope it's final

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bookingapp",
+  "name": "Place to be Ethiopia telegram bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
